v1.4.5
Slider JS missing from preview page - FIXED
Checked for XSS vulnerabilities as per latest WP security update, found none but updated the code to new standards - SECURITY

v1.4.4
In CSV upload file new column post_status added to set listing status - CHANGED
term description sometimes not showing - FIXED
Listing title displaying sanitized for title attribute - ADDED
CSV upload not dealing with line breaks in fields - FIXED
ADDRESS_MSG can't be translated because it contains HTML tags - FIXED
CSS files minified and added to one file for frontend - CHANGED
JS files minified for the frontend - CHANGED
In Best of widget listings "Best of" text not translatable - FIXED
Update for Avada 3.8+ compatibility that removes the need to edit and have the header.php in child theme - CHANGED
On search pages sort options removed as sorting is done by search criteria - CHANGED

v1.4.3
In the map child categories should be checked/unchecked when parent category is checked/unchecked - FIXED
Sorting by title not working correctly - FIXED
Added $post_id param to action 'geodir_update_postrating' - ADDED
Removed preview button from backend for GD posts - CHANGED

v1.4.2
Google api establishment term can override street address - FIXED
Added action geodir_infowindow_meta_after to infowindow - ADDED
On home page map css class added to highlight searched post type - FIXED
Popular category count not working with ajax - FIXED
In backend geodirectory style conflicts with some themes style - FIXED
Sort by most reviews not working in widget and shortcode popular post view - FIXED
Validation added for custom permalinks in GD -> General -> Permalinks - FIXED
All Listings virtual page removed - CHANGED
Shortcode added for best of widget - ADDED
Recent reviews widget ratings stars color not changed with multirating color setting - FIXED
geodir_curPageURL() changed slightly for https url's, we no longer add the port number - CHANGED